--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -74,7 +74,7 @@
                                         id="branch" />
                                     <input autocomplete="off" type="hidden" id="branchID" name="branchID" />
                                     <div class="input-group-append">
-                                        <span class="input-group-text">Branch Type</span>
+                                        <span class="input-group-text">Branch</span>
                                     </div>
                                 </div>
                                 <div class="custom-dropdown cdw-tableoption" id="branchDropdown"></div>
