--- a/views/production/production.ejs
+++ b/views/production/production.ejs
@@ -32,9 +32,24 @@
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
+                            <div class="col-6">
+                                <div class="input-group">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon2">Produced Quantity</span>
+                                    </div>
+                                    <input autocomplete="off" id="producedquantity" name="producedquantity" type="number" class="form-control" placeholder="Enter quantity produced" aria-describedby="basic-addon1">        
+                                </div>
+                            </div>
                             <div class="col-md-6">
-                                <label class="form-label" for="producedquantity">Produced Quantity</label>
-                                <input autocomplete="off" id="producedquantity" name="producedquantity" type="number" class="form-control" placeholder="Enter quantity produced" aria-describedby="basic-addon1">        
+                                <div class="input-group">
+                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Branch" name="branch"
+                                        id="branch" />
+                                    <input autocomplete="off" type="hidden" id="branchID" name="branchID" />
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">Branch</span>
+                                    </div>
+                                </div>
+                                <div class="custom-dropdown cdw-tableoption" id="branchDropdown"></div>
                             </div>
                         </div>
                     </div>
