--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -219,6 +219,9 @@
                         </div>
                         <div class="tab-pane fade" id="payment-sales" role="tabpanel" aria-labelledby="payment-sales-tab">
                             <div class="row justify-content-end mb-2">
+                                <div class="col-md-9 text-left">
+                                    <h5 class="pt-2">Branch: <span id="payment-branch-name"></span></h5>
+                                </div>
                                 <div class="col-md-3 text-right">
                                     <div class="customdropdown">
                                         <div class="select selectbranch">
@@ -272,7 +275,7 @@
                                             <div class="row">
                                                 <div class="col-md-12">
                                                     <div class="card-body p-0 gross-sales-chart">
-                                                        <canvas id="#"></canvas>
+                                                        <canvas id="payment-sales-chart"></canvas>
                                                     </div>
                                                 </div>
                                             </div>
